# grapevine

./: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  release-please-config.json
.claude/skills/release-notes/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/: release-footer.md
.github/workflows/: ci.yml  release.yml
scripts/: render-icons.swift
src/: App.css  App.tsx  PrList.test.ts  PrList.tsx  SettingsView.test.ts  SettingsView.tsx  updater.test.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  github.rs  keychain.rs  lib.rs  main.rs  merged.rs  settings.rs  sync.rs  unread.rs
