[package]
name = "grapevine"
# Not the app version, and not released: tauri.conf.json reads the bundle
# version from package.json, the single source release automation bumps. This
# crate is never published, so this value is inert. Leave it alone.
version = "0.1.0"
description = "Minimal macOS menubar GitHub PR watcher"
authors = ["Khiet Le"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grapevine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
# Only for relaunching into the freshly installed update.
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native"] }
reqwest = { version = "0.12", features = ["json"] }
# For the sync loop's timer and early-wake signal; Tauri's async runtime is
# already Tokio, this just makes the primitives available directly.
tokio = { version = "1", features = ["macros", "sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
# SMAppService bindings for launch-at-login. Unlike a raw LaunchAgent plist,
# SMAppService lists the app in System Settings under "Open at Login" with its
# real name and icon (a plist shows up under "App Background Activity" as the
# signing team, "EHO LIMITED"). Requires macOS 13; see minimumSystemVersion in
# tauri.conf.json.
objc2-service-management = { version = "0.3", default-features = false, features = [
  "std",
  "SMAppService",
  "objc2",
  "objc2-foundation",
] }

